# rust_syscalls

./: Cargo.toml
src/: lib.rs  obf.rs  syscall.rs  syscall_resolve.rs
