[package]
name = "rust_syscalls"
version = "0.1.0"
edition = "2021"
authors = ["Yxel <https://github.com/janoglezcampos>"]
repository = "https://github.com/janoglezcampos/rust_syscalls"

[features]
default = ["direct"]
indirect = []
direct = []

[dependencies]
winapi = { version = "0.3.9", features = ["ntdef", "minwindef", "winnt"] }
ntapi = "0.4.0"